--- a/app/android/app/src/main/res/values/colors.xml
+++ b/app/android/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <resources>
-  <color name="splashscreen_background">#000000</color>
+  <color name="splashscreen_background">#F1F2FF</color>
   <color name="iconBackground">#010121</color>
   <color name="colorPrimary">#023c69</color>
-  <color name="colorPrimaryDark">#000000</color>
+  <color name="colorPrimaryDark">#F1F2FF</color>
 </resources>
